# triangular_solve

./: CMakeLists.txt  test.py
include/solver/triangular/: naive.hpp  naive.tpp  parallel1.hpp  parallel1.tpp  parallel2.hpp  parallel2.tpp
include/storage/matrix/sparse/: csc.hpp  csc.tpp
include/storage/vector/: dense.hpp  dense.tpp
source/: main.cpp
